<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SelectField_Btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/select_field" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/ConditionOperator_TxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_condition_operator" />

            <CheckBox
                android:id="@+id/InvertOperator_CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/invert" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ConditionValues_TxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_values"
            app:counterEnabled="true">

            <EditText
                android:id="@+id/ConditionValues_EditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ConditionValues_ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>
</RelativeLayout>