<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ModifyRecord_ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/RecordViewFragment_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view_classes.RecordViewFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/SearchBar_CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <com.mancj.materialsearchbar.MaterialSearchBar
                    android:id="@+id/Record_SearchBar"
                    style="@style/MaterialSearchBarLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:mt_hint="@string/search_record_hint"
                    app:mt_placeholder="@string/search_record_hint"
                    app:mt_speechMode="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/AddRecord_Btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Record_SearchBar"
                    android:drawableEnd="@mipmap/twotone_add_box_black_36"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/add_new_record" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.chip.ChipGroup
            android:layout_centerInParent="true"
            android:id="@+id/SearchFilter_ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SearchBar_CardView"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecordList_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/SearchFilter_ChipGroup" />

        <TextView
            android:id="@+id/Empty_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/nothing_to_show"
            android:drawablePadding="20dp"
            android:text="@string/nothing_to_show"
            android:visibility="invisible" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>